# saltup

./: .gitignore  README.md  project_requirements.txt  pyproject.toml
examples/notebooks/: saltup_classification_keras.ipynb  saltup_classification_torch.ipynb
saltup/: __init__.py  saltup_env.py
saltup/ai/base_dataformat/: base_datagen.py  base_dataloader.py  base_dataset.py
saltup/ai/classification/: datagenerator.py  dataloader.py
saltup/ai/object_detection/datagenerator/: anchors_based_datagen.py
saltup/ai/object_detection/dataset/: coco.py  pascal_voc.py  yolo_darknet.py
saltup/ai/object_detection/utils/: bbox.py
saltup/ai/object_detection/yolo/: yolo.py
saltup/ai/training/: train.py
saltup/ai/utils/keras/: to_onnx.py
saltup/ai/utils/onnx/: onnx.py  quantization.py
saltup/tools/: consolidate_files.py  replace_yolo_label_class.py  yolo_video.py
saltup/utils/: misc.py
saltup/utils/data/image/: image_utils.py
saltup/utils/data/s3/: s3_utils.py
saltup/utils/data/video/: video_utils.py
test/: test_saltup_env.py
test/ai/classification/: test_datagenerator.py  test_dataloader.py
test/ai/nn_model/: test_nn_model.py
test/ai/object_detection/datagenerator/: test_anchor_based_datagen.py
test/ai/object_detection/dataset/: test_coco_dataset.py  test_coco_s3_loader.py  test_dataset_loader.py  test_loader_factory.py  test_pascal_voc_dataset.py  test_pascal_voc_s3_loader.py  test_yolo_dataset.py  test_yolo_s3_loader.py
test/ai/object_detection/utils/: test_anchor_based_model_utils.py  test_bbox.py  test_bbox_with_image.py  test_metrics.py  test_yolo_output.py
test/ai/object_detection/yolo/: test_anchors_based.py  test_damo.py  test_nas.py  test_ultralytics.py  test_yolo_evaluate.py
test/ai/training/: test_train.py  test_train_keras.py  test_training_callbacks.py  test_training_torch.py
test/ai/utils/keras/: test_to_onnx.py  test_to_tflite_quantization.py
test/ai/utils/torch/: test_to_onnx.py
test/tests_data/saltup_env/: demo_saltup_env.py
