[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "saltup"
version = "0.9.0"
description = "add flavor to your AI projects"
readme = "README.md"
requires-python = ">=3.6"
authors = [
    { name = "Marco Garzola" },
    { name = "Francesco Sonnessa" },
    { name = "Marc Randriatsimiovaloza" }
]
keywords = ["AI", "deep learning", "computer vision", "YOLO"]
license = { text = "MIT" }

# DIPENDENZE COMPLETE (versione normale - backward compatibility)
# Include tutte le funzionalità: dataset loaders, training, inferenza, conversione modelli
dependencies = [
    # === CORE DEPENDENCIES (anche in versione lite) ===
    # Manipolazione dati e immagini
    "pillow",
    "opencv-python",
    "numpy",
    "pandas",
    "scipy",
    "pyarrow",
    "fastparquet",
    
    # Cloud & Utilities
    "boto3",           # S3 access
    "tqdm",            # Progress bars
    "toml",
    "dotmap",
    
    # Visualizzazione
    "matplotlib",
    "seaborn",
    
    # === ML FRAMEWORKS (solo versione completa) ===
    # Deep Learning Frameworks
    "tensorflow==2.18.0",
    "keras",
    "torch",
    "torchvision",
    "torchaudio",
    
    # ONNX Runtime & Conversion
    "onnxruntime-gpu",
    "onnx",
    "tf2onnx==1.16.1",
    "onnx2torch",
    
    # Data Augmentation
    "albumentations",
    
    # Experiment Tracking
    "mlflow",
    
    # Audio Processing
    "librosa",
    "soundfile",
    "cmsisdsp",
    
    # Development & IoT
    "IPython",
    "ipykernel",
    "nbformat",
    "paho-mqtt",
    "pytest"
]

# DIPENDENZE OPZIONALI
[project.optional-dependencies]

# Versione LITE: Solo data processing, dataset loaders, utilities
# Riduzione dimensioni: ~4GB → ~200MB (95% riduzione)
# Use cases: ETL, data preprocessing, dataset analysis, S3 sync
lite = [
    # Manipolazione dati e immagini
    "pillow",
    "opencv-python",
    "numpy",
    "pandas",
    "scipy",
    "pyarrow",
    "fastparquet",
    
    # Cloud & Utilities
    "boto3",           # S3 access
    "tqdm",            # Progress bars
    "toml",
    "dotmap",
    
    # Visualizzazione
    "matplotlib",
    "seaborn",
]

[project.scripts]
saltup_yolo_count_classes = "saltup.tools.yolo_count_classes:main"
saltup_yolo_simlink_per_classes = "saltup.tools.yolo_simlink_per_classes:main"
saltup_yolo_image_inference = "saltup.tools.yolo_inference:main"
saltup_yolo_video_inference = "saltup.tools.yolo_video:main"
saltup_yolo_s3_inference = "saltup.tools.yolo_s3_inference:main"
saltup_info = "saltup.tools.saltup_info:main"
saltup_keras2onnx = "saltup.tools.keras2onnx:main"
saltup_onnx_quantization = "saltup.tools.onnx_quantization:main"

[tool.setuptools.packages.find]
include = ["saltup*"]
exclude = ["mlruns*"]